chap.04/3Tier/yaml1/mysqlstatefulset.yaml

apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
  clusterIP: None #헤드리스 서비스 -> clusterIP가 없음 

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db2
spec:
  replicas: 1
  serviceName: mysql-svc
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mysql
          image: grovince/rapa_db:v1
          args:
            - "--ignore-db-dir=lost+found"
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
            - name: conf
              mountPath: /etc/mysql/conf.d
      volumes:
        - name: conf
          configMap:
            name: mysql-cnf
  volumeClaimTemplates: 
    - metadata:
        name: data
      spec:
        # storageClassName: standard 
        # => default로 동작함 (standard-rwo (default)으로 실행됨)
        accessModes:
          - ReadWriteOnce
        storageClassName: aws-sc-ebs #
        resources:
          requests:
            storage: 1Gi
