chap.04/3Tier/yaml1/redis.yaml
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: redis-conf
# data:
#   redis.conf: |
#     bind 0.0.0.0
#     protected-mode yes
#     port 6379
#     tcp-backlog 511
#     timeout 0
#     tcp-keepalive 300
#     daemonize no
#     pidfile /var/run/redis_6379.pid
#     loglevel notice
#     logfile ""
#     databases 16
#     always-show-logo no
#     set-proc-title yes
#     proc-title-template "{title} {listen-addr} {server-mode}"
#     stop-writes-on-bgsave-error yes
#     rdbcompression yes
#     rdbchecksum yes
#     dbfilename dump.rdb
#     rdb-del-sync-files no
#     dir ./
#     replica-serve-stale-data yes
#     replica-read-only yes
#     repl-diskless-sync no
#     repl-diskless-sync-delay 5
#     repl-diskless-load disabled
#     repl-disable-tcp-nodelay no
#     replica-priority 100
#     acllog-max-len 128
#     requirepass frodo5020!!
#     lazyfree-lazy-eviction no
#     lazyfree-lazy-expire no
#     lazyfree-lazy-server-del no
#     replica-lazy-flush no
#     lazyfree-lazy-user-del no
#     lazyfree-lazy-user-flush no
#     oom-score-adj no
#     oom-score-adj-values 0 200 800
#     disable-thp yes
#     appendonly no
#     appendfilename "appendonly.aof"
#     appendfsync everysec
#     no-appendfsync-on-rewrite no
#     auto-aof-rewrite-percentage 100
#     auto-aof-rewrite-min-size 64mb
#     aof-load-truncated yes
#     aof-use-rdb-preamble yes
#     lua-time-limit 5000
#     slowlog-log-slower-than 10000
#     slowlog-max-len 128
#     latency-monitor-threshold 0
#     notify-keyspace-events ""
#     hash-max-ziplist-entries 512
#     hash-max-ziplist-value 64
#     list-max-ziplist-size -2
#     list-compress-depth 0
#     set-max-intset-entries 512
#     zset-max-ziplist-entries 128
#     zset-max-ziplist-value 64
#     hll-sparse-max-bytes 3000
#     stream-node-max-bytes 4096
#     stream-node-max-entries 100
#     activerehashing yes
#     client-output-buffer-limit normal 0 0 0
#     client-output-buffer-limit replica 256mb 64mb 60
#     client-output-buffer-limit pubsub 32mb 8mb 60
#     hz 10
#     dynamic-hz yes
#     aof-rewrite-incremental-fsync yes
#     rdb-save-incremental-fsync yes
#     jemalloc-bg-thread yes
# ---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: grovince/rapa_redis:v1
        ports:
        - containerPort: 6379
        volumeMounts:
          - name: redis-conf
            mountPath: /usr/local/etc/redis/
      volumes:
        - name: redis-conf
          configMap:
            name: redis-conf
