chap.04/3Tier/yaml1/was.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywas
spec:
  selector:
    app: mywas
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywas
spec:
  selector:
    matchLabels:
      app: mywas
  replicas: 3
  template:
    metadata:
      labels:
        app: mywas
    spec:
      containers:
      - name: mywas
        image: grovince/rapa_was2:v1
        #imagePullPolicy: Always #도커허브에 등록된 이미지를 가져옴 
        ports:
        - containerPort: 8080
