chap.04/3Tier/yaml1/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: myweb
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myweb
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nginx-conf
            # mountPath: /etc/nginx/conf.d -> 원래 conf 파일의 정보 => 해당 경로로 마운트하면 css, html 파일 등 못받음 
            mountPath: /etc/nginx/
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
