chap.04/3Tier/yaml1/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:178020491921:certificate/78249358-dc97-46f7-a444-4f5a31e43305
    # 인증서가 등록된 CNAME 레코드의 arn
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  # tls:
  #   - hosts:
  #       - www.frodo.co.kr
  #     secretName: tls-crt 
  rules:
  - host: www.solju.kr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myweb
            port: 
              number: 80
